--- a/A05/home.html
+++ b/A05/home.html
@@ -16,9 +16,9 @@
         <h1 style="text-align:center">Erik's Assignment 5</h1>
     </header>
     <nav>
-        <a href="/ics415F15/A05/home.html" title="Home">Home</a> |
-        <a href="/ics415F15/A05/forms.html" title="Forms">Forms</a> |
-        <a href="/ics415F15/A05/bonus.html" title="Bonus">Bonus</a>
+        <a href="home.html" title="Home">Home</a> |
+        <a href="forms.html" title="Forms">Forms</a> |
+        <a href="bonus.html" title="Bonus">Bonus</a>
     </nav>
     <aside style="text-align:center">
         <h3>Summary Window</h3>
