--- a/IC/w2c1/home.html
+++ b/IC/w2c1/home.html
@@ -15,8 +15,8 @@
         <h1 style="text-align:center">Erik's Assignment 4</h1>
     </header>
     <nav>
-        <a href="/ics415F15/A04/home.html" title="Home">Home</a> |
-        <a href="/ics415F15/A04/forms.html" title="Forms">Forms</a>
+        <a href="home.html" title="Home">Home</a> |
+        <a href="forms.html" title="Forms">Forms</a>
     </nav>
     <aside style="text-align:center">
         <h3>Summary Window</h3>
