--- a/IC/w2c2/home.html
+++ b/IC/w2c2/home.html
@@ -3,16 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Assignment 4</title>
-    <style>
-        header, nav, section, footer {border:1px solid grey;}
-        aside {position: absolute; left: 0; width: 25%}
-        section {position: relative; left: 25%; width: 75%;}
-        footer {text-align: center; bottom: 0;}
-    </style>
+    <link rel="stylesheet" href="layout.css" type="text/css">
 </head>
 <body>
     <header>
-        <h1 style="text-align:center">Erik's Assignment 4</h1>
+        <h1 style="text-align:center">w2c2</h1>
     </header>
     <nav>
         <a href="home.html" title="Home">Home</a> |
@@ -26,7 +21,7 @@
             unordered, ordered, and description.
         </p>
     </aside>
-    <section>
+    <div id="content">
         <h3>Home Page</h3>
         <p>Tables:</p>
         <p>Borderless Table</p>
@@ -85,10 +80,9 @@
         <p>This web page has a two column layout with header, navigation bar, and footer.
          There is a fairly large header, narrow navigation bar. The main section of the
         website takes up 75% of the page. The left sidebar is center aligned.</p>
-    </section>
+    </div>
     <footer>
         <p style="text-align:center"><a href="#">Top</a> Copyright (C) Erik Huang</p>
-
     </footer>
 </body>
 </html>
