--- a/IC/w2c2/forms.html
+++ b/IC/w2c2/forms.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Shadows Into Light">
     <meta charset="UTF-8">
     <title>Assignment 4</title>
     <link rel="stylesheet" href="layout.css" type="text/css">
