--- a/A06/bonus.html
+++ b/A06/bonus.html
@@ -23,7 +23,7 @@
         <aside class="col-sm-4">
             <p>Here are some images</p>
         </aside>
-        <section class="col-sm-8" style="border-left: solid black">
+        <section class="col-sm-8" style="border-left: solid ghostwhite">
             <h2>Railgun jpg</h2>
             <img src="http://upic.me/i/sk/toarukuguakunorailgun.jpg"
                  alt="Responsive image" class="img-responsive">
