--- a/A06/forms.html
+++ b/A06/forms.html
@@ -24,7 +24,7 @@
             <h3>Forms Summary</h3>
             <p>HTML supports several different types of input</p>
         </aside>
-        <section class="col-sm-8" style="border-left: solid black">
+        <section class="col-sm-8" style="border-left: solid ghostwhite">
             <h3>Forms Page</h3>
             <h3>Here are tabs</h3>
             <div>
