--- a/A06/home.html
+++ b/A06/home.html
@@ -28,7 +28,7 @@
                 unordered, ordered, and description.
             </p>
         </aside>
-        <section class="col-sm-8" style="border-left: solid black">
+        <section class="col-sm-8" style="border-left: solid ghostwhite">
             <h3>Home Page</h3>
 
             <p>Random text</p>
